--- a/web-server/index.html
+++ b/web-server/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
 <html>
-<title>Hello World</title>
-<body><p>Hello World</p></body>
-</html>
+	<head>
+		<title></title>
+		<META HTTP-EQUIV="Refresh" CONTENT="0;URL=Skitter_war">
+	</head>
+	<body>
+	</body>
+</html> 
