added index.html and css

--- a/web-server/index.html
+++ b/web-server/index.html
@@ -1,8 +1,14 @@
 <html>
-	<head>
-		<title></title>
-		<META HTTP-EQUIV="Refresh" CONTENT="0;URL=Skitter_war">
+    <head>
+		<title>Skitter</title>
 	</head>
-	<body>
-	</body>
+    <body>
+        <link rel='stylesheet' href='CSS/auth.css'>
+	    <form id='login' action='' method='post'>
+            <img src="img/Skitter.png" class='center'></img>
+            <div><input class='textField' name='usr' type='text' placeholder='Username' required></div>
+            <div><input class='textField' name='pass' type='password' placeholder='Password' required></div>
+            <div><button type='submit'>Login</button><button type='submit'>Register</button></div>
+        </form>
+    </body>
 </html> 
