--- a/web-server/index.html
+++ b/web-server/index.html
@@ -4,7 +4,7 @@
 	</head>
     <body>
         <link rel='stylesheet' href='CSS/auth.css'>
-	    <form id='login' action='' method='post'>
+	    <form id='login' action='/login' method='post'>
             <img src="img/Skitter.png" class='center'></img>
             <div><input class='textField' name='usr' type='text' placeholder='Username' required></div>
             <div><input class='textField' name='pass' type='password' placeholder='Password' required></div>
