php now works with nginx

--- a/web-server/index.html
+++ b/web-server/index.html
@@ -4,8 +4,8 @@
 	</head>
     <body>
         <link rel='stylesheet' href='CSS/auth.css'>
-	    <form id='login' action='/login' method='post'>
-            <img src="img/Skitter.png" class='center'></img>
+	    <form id='login' action='/php/login.php' method='post'>
+            <div class='logo'><img src="img/Skitter.png"></img></div>
             <div><input class='textField' name='usr' type='text' placeholder='Username' required></div>
             <div><input class='textField' name='pass' type='password' placeholder='Password' required></div>
             <div><button type='submit'>Login</button><button type='submit'>Register</button></div>
