--- a/web-server/index.html
+++ b/web-server/index.html
@@ -8,7 +8,10 @@
             <div class='logo'><img src="img/Skitter.png"></img></div>
             <div><input class='textField' name='usr' type='text' placeholder='Username' required></div>
             <div><input class='textField' name='pass' type='password' placeholder='Password' required></div>
-            <div><button type='submit'>Login</button><button type='submit'>Register</button></div>
+            <div><button type='submit'>Login</button></div>
+        </form>
+        <form id='register' action='/register.html' method='get'>
+            <div><button type='submit'>Register</button></div>
         </form>
     </body>
 </html> 
