--- a/web-server/index.html
+++ b/web-server/index.html
@@ -6,7 +6,7 @@
         <link rel='stylesheet' href='CSS/auth.css'>
 	    <form id='login' action='/php/login.php' method='post'>
             <div class='logo'><img src="img/Skitter.png"></img></div>
-            <div><input class='textField' name='usr' type='text' placeholder='Username' required></div>
+            <div><input class='textField' name='usr' type='text' placeholder='RIT Username' required></div>
             <div><input class='textField' name='pass' type='password' placeholder='Password' required></div>
             <div><button type='submit'>Login</button></div>
         </form>
