homepage now has poorly made top bar and a settings page

--- a/web-server/home.html
+++ b/web-server/home.html
@@ -3,10 +3,20 @@
         <title>Skitter</title>
     </head>
     <body>
-        <link rel='stylesheet' href='CSS/auth.css'>
-        <form id='login' action='/php/register.php' method='post'>
-            <div class='logo'><img src="img/Skitter.png"></img></div>
-        </form>
+        <link rel='stylesheet' href='CSS/home.css'>
+        <div class='topBar'>
+            <form>
+                <img src='img/Logo.png' height='30'/>
+                <img src='img/Skitter.png' height='25'/>
+                <div class='center'>
+                    <input name='search' type='text' placeholder='search'>
+                </div>
+                <img src='img/Account.png' height='30' align='right'/>
+                <a href='settings.html'>
+                    <img src='img/settings.png' height='25'align='right'/>
+                </a>
+            </form>
+        </div>
     </body>
 </html>
 
