--- a/web-server/index.html
+++ b/web-server/index.html
@@ -8,7 +8,7 @@
             <div class='logo'><img src="img/Skitter.png"></img></div>
             <div><input class='textField' id='usr' type='text' placeholder='RIT Username' required></div>
             <div><input class='textField' id='pass' type='password' placeholder='Password' required></div>
-            <p id='loginResponse'></p>
+            <div><p id='loginResponse'></p></div>
             <div><button type='button' onclick="attemptLogin(document.getElementById('usr').value, document.getElementById('pass').value);">Login</button></div>
         </form>
         <form id='register' action='/register.html' method='get'>
