--- a/web-server/index.html
+++ b/web-server/index.html
@@ -19,11 +19,16 @@ function attemptLogin(usr, pass){
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-            document.getElementById("loginResponse").innerHTML = this.responseText;
+            if(this.responseText == "success"){
+                window.location.href='home.html';
+            }else{
+                document.getElementById("loginResponse").innerHTML = this.responseText;
+            }
         }
     };
-    xhttp.open("POST", "php/login.php?usr="+usr+"&pass="+pass, true);
-    xhttp.send();
+    xhttp.open("POST", "php/login.php", true);
+    xhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
+    xhttp.send("usr="+usr+"&pass="+pass);
 
 }
         </script>
