regstration page fixed and sessions added

--- a/web-server/register.html
+++ b/web-server/register.html
@@ -26,7 +26,7 @@ function attemptRegister(RIT, eml, display){
     };
     xhttp.open("POST", "php/register.php", true);
     xhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
-    xhttp.send("RIT="+RIT+"&eml="+eml"&display="+display);
+    xhttp.send("eml="+eml+"&RIT="+RIT+"&display="+display);
 
 }
         </script>
