fixed bug with js loading index.html

--- a/web-server/home.html
+++ b/web-server/home.html
@@ -17,6 +17,11 @@
                 </a>
             </form>
         </div>
+        <div class='feedForm'>
+            <form>
+                <input name='search' class='textField'type='text' placeholder='search'>
+            </form>
+        </div>
     </body>
 </html>
 
