started work on elasticsearch and node.js

--- a/web-server/home.html
+++ b/web-server/home.html
@@ -17,8 +17,15 @@
                 </a>
             </form>
         </div>
-        <div class='feedForm'>
-            <form>
+        <div class='row'>
+            <form class='feedForm' action='', method='post'>
+                <textarea name='newSkit' class='textField' placeholder='daddy?' rows='4' cols='40' maxlength='150'></textarea>
+                <button type='submit'>submit</button>
+            </form>
+            <form class='feedForm'>
+                <input name='search' class='textField'type='text' placeholder='search'>
+            </form>
+            <form class='feedForm'>
                 <input name='search' class='textField'type='text' placeholder='search'>
             </form>
         </div>
