--- a/web-server/settings.html
+++ b/web-server/settings.html
@@ -5,7 +5,7 @@
     <body>
         <link rel='stylesheet' href='CSS/set.css'>
         <div class='topBar'>
-            <form id='search' action='' method=''>
+            <form id='search'>
                 <img src='img/Logo.png' height='30'/>
                 <img src='img/Skitter.png' height='25'/>
                 <div class='center'>
