--- a/web-server/home.html
+++ b/web-server/home.html
@@ -5,15 +5,10 @@
     <body>
         <link rel='stylesheet' href='CSS/home.css'>
         <div class='topBar'>
-            <form>
+            <form action='/php/search.php' method='post'>
                 <img src='img/Logo.png' height='30'/>
                 <img src='img/Skitter.png' height='25'/>
-                <div class='center'>
-                    <form>
-                        <input id='search' type='text' placeholder='search'>
-                        <button type='button' onclick="searchUser(document.getElementById('search').value);">search</button>
-                    </form>
-                </div>
+                <input name='search' type='text' placeholder='search'>
                 <img src='img/Account.png' height='30' align='right'/>
                 <a href='settings.html'>
                     <img src='img/settings.png' height='25'align='right'/>
@@ -38,17 +33,20 @@
         <script>
 function searchUser(searchString){
     var xhttp = new XMLHttpRequest();
-    document.getElementById('newSkit').placeholder = "xhttp";
-    var ses = getCookie("session");
+    if(searchString == ""){
+        return;
+    }
+    //var ses = getCookie("session");
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-            document.getElementById('res').value = this.responseText;
-            document.getElementById('form').submit();
+            //document.getElementById('res').value = this.responseText;
+            //document.getElementById('form').submit();
         }
     };
-    xhttp.open("POST", "php/FlaskProxy.php", true);
+    xhttp.open("POST", "php/search.php", true);
     xhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
-    xhttp.send("search="+searchString+"&session_id="+ses);
+    xhttp.send("search="+searchString);
+    window.location = "php/search.php";
 }
 
 function getCookie(cname) {
