--- a/web-server/index.html
+++ b/web-server/index.html
@@ -18,24 +18,17 @@
 function attemptLogin(usr, pass){
     var xhttp = new XMLHttpRequest(),
         suc="success",
-        err="error",
-        fail="fail",
-        d= new Date();
+
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
             if(~this.responseText.indexOf(suc)){
-                if(!~this.responseText.indexOf(err)){
-                    if(!~this.responseText.indexOf(fail)){
-                        //var ses = this.responseText.substring(8);
-                        //var newD = new Date(d.getTime() + 180*60000);
-                        //document.cookie = "session="+ses+"; expires="+newD+"; path=*/*;";
-                        //window.location.href='home.html';
-                    }
-                }
+                window.location.href='home.html';
+
             }else{
-                document.getElementById("loginResponse").innerHTML = this.responseText;
+                window.location.href='index.html';
             }
         }
+        
     };
     xhttp.open("POST", "php/login.php", true);
     xhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
