--- a/web-server/index.html
+++ b/web-server/index.html
@@ -17,7 +17,7 @@
         <script>
 function attemptLogin(usr, pass){
     var xhttp = new XMLHttpRequest(),
-        suc="success",
+        suc="success";
 
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
